css/style-1.css
/* CSS declarations go here */
html, body, div, span, applet, object, iframe, p,
h1, h2, h3, h4, h5, h6, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  vertical-align: baseline;
  letter-spacing: normal;
  font-family: "Raleway", sans-serif;
  text-decoration: none;
}

/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure,
footer, header, hgroup, menu, nav, section {
    display: block;
}

.center-vertically {
  top: 50%;
  transform: translateY(-50%);
  position: absolute;
}

.center-horizontally {
  left: 50%;
  transform: translateX(-50%);
  position: absolute;
}

.triangle {
  border-right: 2px solid;
  border-bottom: 2px solid;
  width: 9px; height: 9px;
  transform: rotate(-45deg);
}

.wrapper {
  text-align: center;
}

.nav {
  width: 100%;
}

.showcase {
  margin: 0;
}

h1 {
  font-family: 'Raleway';
  font-weight: 700;
  font-size: 13px;
}

p {
  font-family: 'Raleway';
  font-weight: 400;
  font-size: 12px;
}

a {
  color: inherit;
}

.project-blurb {
  max-width: 864px;
  margin: 0px auto 6px;
}

.project-blurb h1 {
  text-align: left;
  font-size: 30px;
  line-height: 150%;
}

.project-blurb p {
  text-align: left;
  font-size: 15px;
  line-height: 150%;
}

.caption p {
  text-align: center;
  font-size: 13px;
}

.project-image {
  display: block;
  width: 100%;
  max-width: 864px;
  margin: 0px auto 6px;
}

.video-player {
  display: block;
  width: 100%;
  max-width: 864px;
  margin: 0px auto 6px;
}

@media screen and (max-width: 888px) {
  .project-blurb {
    margin: 0px 12px 6px;
  }
}

.profile {
  width: 120px;
  height: 120px;
  margin: 24px auto;
  border-radius: 60px 60px;
  background: url(../images/quinn.JPG);
  background-size: cover;
  background-position-x: 50%;
  background-position-y: 50%;
  background-repeat: no-repeat;
  transition: box-shadow .3s ease-out;
}

.content {
  position: relative;
  margin: 0px 0px 12px;
  height: 315px;
  max-width: 1080px;
  transition: box-shadow .3s ease-out;
}

.clickable-img:hover {
  box-shadow: 1px 1px 6px #1e262c;
}

.last {
  margin-bottom: 0 !important;
}

.text-module {
  margin: 24px auto;
  max-width: 360px;
}

.text-module p {
  margin: 12px;
}

.text-module p a {
  text-decoration: underline;
}

.highlight a {
  transition: color .3s ease-out;
}

.highlight a:hover {
  color: orange;
}

.underline a {
  text-decoration: underline;
}

@media screen and (min-width: 1024px) {
  .nav {
    position: fixed;
    width: 360px;
    height: 100%;
    top: 0;
    left: 0;
  }

  .content-nav {
    margin-top: 0px;
    opacity: 0;
    transition: opacity 1.5s;
    z-index: -1;
  }

  .text-module {
    margin: 12px 24px;
  }

  .profile {
    margin: 90px auto 0px;
  }

  .showcase {
    margin-left: 360px;
  }

  .showcase-nav {
    margin-top: 222px
  }
}

.overlay {
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0;
  transition: opacity .6s;
}

.content-text {
  position: absolute;
  bottom: 12px;
  left: 12px;
}

.content-text h1 {
  color: white;
  font-size: 21px;
  text-align: left;
}

.content-text p {
  color:white;
  text-align: left;
}

.content-preview {
  position: absolute;
  width: 100%;
  height: 315px;
  max-width: 1080px;
  opacity: 0;
  transition: opacity .45s linear;
}

.showcase-content {
  position: relative;
  margin-bottom: 24px;
  height: 654px;
  max-width: 1080px;
  background-size: cover;
  background-position-x: 50%;
  background-position-y: 50%;
}

.showcase-text {
  position: fixed;
  width: 360px;
  height: 100%;
  top: 0px;
}

.trigger {
  position: absolute;
  bottom: 300px;
}

#nav-1 {
  transition: opacity 1.5s;
}

#woodresin {
  background-image: url(../images/woodresin/cover.jpg);
  background-size: cover;
  background-position-x: 63%;
  background-position-y: 15%;
  background-repeat: no-repeat;
}

#woodresin-compressed {
  background: url(../images/woodresin/cover.min.jpg);
  background-position-x: 63%;
  background-position-y: 15%;
  background-size: cover;
  background-repeat: no-repeat;
}

#photography {
  background: url(../images/everyday-sf/cover.jpg);
  background-size: cover;
  background-position-x: 72%;
  background-position-y: 48%;
  background-repeat: no-repeat;
}

#photography-compressed {
  background: url(../images/everyday-sf/cover.min.jpg);
  background-size: cover;
  background-position-x: 72%;
  background-position-y: 48%;
  background-repeat: no-repeat;
}

#ee192 {
  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0) 81%, rgba(0,0,0,1)), url(../images/ee192/cover.jpg);
  background-size: cover;
  background-position-x: 63%;
  background-position-y: 45%;
  background-repeat: no-repeat;
}

#ee192-compressed {
  background: linear-gradient(rgba(0,0,0,0), rgba(0,0,0,0) 81%, rgba(0,0,0,1)), url(../images/ee192/cover.min.jpg);
  background-size: cover;
  background-position-x: 63%;
  background-position-y: 45%;
  background-repeat: no-repeat;
}

#nokia {
  background: url(../images/watch/cover.jpg);
  background-size: cover;
  background-position-x: 57%;
  background-position-y: 33%;
  background-repeat: no-repeat;
}

#nokia-compressed {
  background: url(../images/watch/cover.min.jpg);
  background-size: cover;
  background-position-x: 57%;
  background-position-y: 33%;
  background-repeat: no-repeat;
}

/** Hide scrollbars on Chrome, Safari, and IE10 **/
::-webkit-scrollbar { width: 0 !important }

